<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/purple900"
    tools:context=".MainActivity"
    android:stretchColumns="*"
    android:weightSum="6" >

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/result"
            android:gravity="center_vertical|end"
            android:id="@+id/textResult"
            android:layout_column="0"
            android:layout_span="4"
            android:paddingRight="32dp"
            android:textColor="@color/softblack"
            android:textSize="42sp"
            android:background="@android:color/white" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" >

    <Button
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:text="@string/clear"
        android:gravity="center"
        android:id="@+id/buttonClear"
        android:layout_column="0"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:background="@color/softblack"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="-/+"
            android:id="@+id/buttonNegPos"
            android:layout_column="1"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:background="@color/softblack"
            android:gravity="center" />

    <Button
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:text="@string/back"
        android:id="@+id/buttonBackspace"
        android:layout_column="2"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:background="@color/softblack"
        android:gravity="center" />

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/divide"
            android:id="@+id/buttonDivide"
            android:layout_column="3"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:background="@color/purple900"
            android:gravity="center" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="7"
            android:id="@+id/buttonNumber7"
            android:layout_column="0"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:background="@color/pink900"
            android:gravity="center" />

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="8"
            android:id="@+id/buttonNumber8"
            android:layout_column="1"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:background="@color/pink900"
            android:gravity="center" />

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="9"
            android:id="@+id/buttonNumber9"
            android:layout_column="2"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:background="@color/pink900"
            android:gravity="center" />

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/multiply"
            android:id="@+id/buttonMultiply"
            android:layout_column="3"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:background="@color/purple900"
            android:gravity="center" />



    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" >

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="4"
            android:id="@+id/buttonNumber4"
            android:layout_column="0"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:background="@color/pink900"
            android:gravity="center" />

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="5"
            android:id="@+id/buttonNumber5"
            android:layout_column="1"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:background="@color/pink900"
            android:gravity="center" />

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="6"
            android:id="@+id/buttonNumber6"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:textSize="36sp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:background="@color/pink900"
            android:gravity="center" />

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/subtract"
            android:id="@+id/buttonSubtract"
            android:layout_column="3"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:background="@color/purple900"
            android:gravity="center" />



    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" >

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="1"
            android:id="@+id/buttonNumber1"
            android:layout_column="0"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:background="@color/pink900"
            android:gravity="center" />

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="2"
            android:id="@+id/buttonNumber2"
            android:layout_column="1"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:background="@color/pink900"
            android:gravity="center" />

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="3"
            android:id="@+id/buttonNumber3"
            android:layout_column="2"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:background="@color/pink900"
            android:gravity="center" />

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/add"
            android:id="@+id/buttonAdd"
            android:layout_column="3"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:background="@color/purple900"
            android:gravity="center" />


    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" >



        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="0"
            android:id="@+id/buttonNumber0"
            android:layout_column="0"
            android:layout_span="2"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:background="@color/pink900"
            android:gravity="center" />

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="."
            android:id="@+id/buttonDecimal"
            android:layout_column="2"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:background="@color/pink900"
            android:gravity="center" />

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/calculate"
            android:id="@+id/buttonCalculate"
            android:layout_column="3"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:background="@color/purple900"
            android:gravity="center" />




    </TableRow>

</TableLayout>
